# star-field

./: .gitignore  CMakeLists.txt  README.md  Star.cpp  Star.h  main.cpp
